<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:weightSum="10" >
    
    <LinearLayout 
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/tv_fgp_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/text_fgp_intro"
            android:textColor="@color/label_global_dark"
            android:textSize="@dimen/text_global_normal"/>
        <EditText 
            android:id="@+id/edt_fgp_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/label_global_dark"
            android:textSize="@dimen/text_global_normal"/>
        
        <Button 
            android:id="@+id/bt_fgp_enter"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/bt_fgp_enter"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bt_schema_green"
            android:textColor="@color/label_global_white"
            android:textSize="@dimen/text_global_normal"/>
        
        <TextView 
	        android:id="@+id/tv_fgp_gologin"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/text_fgp_gologin"
	        android:textColor="@color/label_global_green"
	        android:textSize="@dimen/text_global_normal"/>
    </LinearLayout>
    
</LinearLayout>
