<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:weightSum="10" >
    
    <!-- FB button -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_fb_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="15sp" />
        <com.facebook.login.widget.LoginButton
	        android:id="@+id/bt_fb_login"
	        android:layout_width="180dp"
	        android:layout_height="35dp" />
    </LinearLayout>
    <!-- Line -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" >
        <View 
            android:layout_width="0dp"
	        android:layout_height="1dp"
	        android:layout_weight="4.9"
	        android:background="@color/label_global_green_bright"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/text_or"
            android:textColor="@color/label_global_green_bright"
            android:textSize="@dimen/text_global_normal"/>
        <View 
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="4.9"
            android:background="@color/label_global_green_bright"/>
    </LinearLayout>
    <!-- login -->
    <LinearLayout 
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <EditText 
            android:id="@+id/edt_login_tel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_tel_or_email"
            android:textColorHint="@color/label_global_gray_bright"
            android:textColor="@color/label_global_white_bright"
            android:textSize="@dimen/text_global_normal"/>
        <EditText 
            android:id="@+id/edt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColorHint="@color/label_global_gray_bright"
            android:textColor="@color/label_global_white_bright"
            android:textSize="@dimen/text_global_normal"/>
        <Button 
            android:id="@+id/bt_login_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/bt_login"
            android:background="@drawable/bt_schema_green"
            android:textColor="@color/label_global_white"
            android:textSize="@dimen/text_global_normal" />
    </LinearLayout>
    <TextView 
        android:id="@+id/tv_login_forgotpass"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_forgotpass"
        android:textColor="@color/label_global_gray_bright"
        android:textSize="@dimen/text_global_normal" />
    <TextView 
        android:id="@+id/tv_login_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/text_reg"
        android:textColor="@color/label_global_green_bright"
        android:textSize="@dimen/text_global_normal" />
    <TextView 
        android:id="@+id/tv_login_guide"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_guide"
        android:textColor="@color/label_global_orange_bright"
        android:textSize="@dimen/text_global_normal" />
</LinearLayout>